--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,1 @@
-.wallet {
-  width: 720px;
-  height: 300px;
-  border: 3px solid black;
-  position: relative;
-}
-
-.blockmove {
-  float: left;
-  height: 100%;
-  width: auto;
-}
-.sidetext {
-  color: #112244;
-  letter-spacing: .05em;
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  font-size: 12px;
-  font-weight: 400;
-  right: -45px;
-  bottom: 70px;
-}
-
-.qrcode {
-  width: 28%;
-  float: left;
-  position: relative;
-  padding: 15px
-}
-
-.iconlogo {
-  width: 28%;
-  float: left;
-  background-color: transparent !important;
-  position: relative;
-  padding: 20px
-}
-
-.iconlogo img {
-  width:90%;
-  height:auto;
-}
-
-.addresses {
-  float: left;
-  width: 85%;
-  padding: 0 25px 10px
-}
-
-.addresses p {
-  font-size: 14px;
-}
-
-@media print
-{
-    .no-print, .no-print *
-    {
-        display: none !important;
-    }
-}
+.generate{width:720px}.wallet{width:720px;height:300px;border:3px solid #000;position:relative}.blockmove{float:left;height:100%;width:auto}.sidetext{color:#124;letter-spacing:.05em;-webkit-transform:rotate(-90deg);-ms-transform:rotate(-90deg);transform:rotate(-90deg);position:absolute;right:0;bottom:0;font-size:12px;font-weight:400;right:-45px;bottom:70px}.qrcode{width:28%;float:left;position:relative;padding:15px}.iconlogo{width:28%;float:left;background-color:transparent!important;position:relative;padding:20px}.iconlogo img{width:90%;height:auto}.addresses{float:left;width:85%;padding:0 25px 10px}.addresses p{font-size:14px}@media print{.no-print,.no-print *{display:none!important}}
